--- a/app/templates/frm_add_participant.html
+++ b/app/templates/frm_add_participant.html
@@ -6,7 +6,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             {{ render_breadcrumb_item('list_participants', 'Participants') }}
-            {{ render_breadcrumb_item('frm_add_participant', 'Add') }}
+            {{ render_breadcrumb_item('add_participant', 'Add') }}
 
         </ol>
     </nav>
