--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,11 +3,7 @@
 {% block content %}
     <h1>Bootstrap-Flask Demo Application</h1>
 <ul>
-    <li><a href="{{ url_for('test_form') }}">Form</a></li>
-    <li><a href="{{ url_for('test_nav') }}">Nav</a></li>
-    <li><a href="{{ url_for('test_pagination') }}">Pagination</a></li>
-    <li><a href="{{ url_for('test_flash') }}">Flash Messages</a></li>
-    <li><a href="{{ url_for('test_table') }}">Table</a></li>
-    <li><a href="{{ url_for('test_icon') }}">Icon</a></li>
+    <li><a href="{{ url_for('add_participant') }}">Randomize a participant</a></li>
+    <li><a href="{{ url_for('list_participants') }}">Participants</a></li>
 </ul>
 {% endblock %}
