--- a/flask_ui/templates/index.html
+++ b/flask_ui/templates/index.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Bootstrap-Flask Demo Application</h1>
+    <h1>Urn randomization</h1>
 <ul>
-    <li><a href="{{ url_for('add_participant') }}">Randomize a participant</a></li>
+    <li><a href="{{ url_for('randomize_participant') }}">Randomize a participant</a></li>
     <li><a href="{{ url_for('list_participants') }}">Participants</a></li>
 </ul>
 {% endblock %}
