--- a/flask_ui/templates/tbl_participant.html
+++ b/flask_ui/templates/tbl_participant.html
@@ -2,16 +2,29 @@
 {% from 'bootstrap/nav.html' import render_nav_item, render_breadcrumb_item %}
 
 {% block extra_stylesheets %}
+  <link href="../static/css/datatables.css" rel="stylesheet">
   <link href="https://cdn.datatables.net/1.10.10/css/jquery.dataTables.css" rel="stylesheet">
   <link href="https://cdn.datatables.net/buttons/1.6.5/css/buttons.dataTables.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.datatables.net/1.10.23/css/dataTables.bootstrap5.min.css" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
+<div class="container">
+  <div class="row">
+    <h2 align="center">Treatment Assignments in {{ project }}</h2>
+  </div>
+    <div class="row">
+    {{ div_plt | safe }}
+    </div>
+  <div class="row">
+    <hr/>
+  <h2 align="center">Randomized participants</h2>
+  </div>
   <div class="row">
     <div class="col-lg-12">
-      <h2>Randomized participants</h2>
-      <table id="tbl_participant" class="display" cellspacing="0" width="100%">
+      <table id="tbl_participant" class="display compact nowrap" cellspacing="0" width="100%">
         <thead>
           <tr>
             {% for colname in colnames %}
@@ -23,10 +36,15 @@
     </table>
   </div>
 </div>
+  </div>
+{{ script_plt | safe }}
+{{ js_resources|indent(4)|safe }}
+{{ css_resources|indent(4)|safe }}
 {% endblock %}
 
 {% block extra_javascripts %}
   <script src="https://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdn.datatables.net/plug-ins/1.10.22/type-detection/num-html.js"></script>
   <script src="https://cdn.datatables.net/buttons/1.6.5/js/dataTables.buttons.min.js"></script>
   <script src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.flash.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
@@ -34,58 +52,16 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
   <script src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.html5.min.js"></script>
   <script src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.print.min.js"></script>
+  <script src="../static/js/datatables.js"></script>
   <script type="text/javascript" charset="utf-8">
   $(document).ready(function () {
-    var oldExportAction = function (self, e, dt, button, config) {
-      if (button[0].className.indexOf('buttons-excel') >= 0) {
-        if ($.fn.dataTable.ext.buttons.excelHtml5.available(dt, config)) {
-          $.fn.dataTable.ext.buttons.excelHtml5.action.call(self, e, dt, button, config);
-        }
-        else {
-          $.fn.dataTable.ext.buttons.excelFlash.action.call(self, e, dt, button, config);
-        }
-      }
-      else if (button[0].className.indexOf('buttons-print') >= 0) {
-        $.fn.dataTable.ext.buttons.print.action(e, dt, button, config);
-      }
-    };
-    var fullExportAction = function (e, dt, button, config) {
-      var self = this;
-      var oldStart = dt.settings()[0]._iDisplayStart;
-
-      dt.one('preXhr', function (e, s, data) {
-        // Just this once, load all data from the server...
-        data.start = 0;
-        data.length = 2147483647;
-
-        dt.one('preDraw', function (e, settings) {
-          // Call the original action function
-          oldExportAction(self, e, dt, button, config);
-
-          dt.one('preXhr', function (e, s, data) {
-            // DataTables thinks the first item displayed is index 0, but we're not drawing that.
-            // Set the property to what it was before exporting.
-            settings._iDisplayStart = oldStart;
-            data.start = oldStart;
-          });
-
-          // Reload the grid with the original page. Otherwise, API functions like table.cell(this) don't work properly.
-          setTimeout(dt.ajax.reload, 0);
-
-          // Prevent rendering of the full data to the DOM
-          return false;
-        });
-      });
-
-      // Requery the server with the new one-time export settings
-      dt.ajax.reload();
-    };
     var table = $('#tbl_participant').DataTable({
+        "scrollX": true,
         "processing": true,
         "serverSide": true,
         lengthMenu: [[5, 10], [5, 10]],
         pageLength: 5,
-        "ajax": "{{ url_for('data') }}",
+        "ajax": "{{ url_for('dtbl_participants') }}",
         dom: 'Blfrtip',
         buttons: [
             {
