--- a/urand_gui/templates/tbl_participant.html
+++ b/urand_gui/templates/tbl_participant.html
@@ -11,18 +11,37 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container-fluid">
   <div class="row">
+    <div class="col">
     <h2 align="center">Treatment Assignments in {{ project }}</h2>
-  </div>
-    <div class="row">
-    {{ div_plt | safe }}
     </div>
-  <div class="row">
-    <hr/>
-  <h2 align="center">Randomized participants</h2>
   </div>
+    <div class="row gy-3">
+      <div class="col">
+    {{ div_plt | safe }}
+      </div>
+        <div class="w-100"></div>
+        <div class="col">
+      <hr/>
+    </div>
+    </div>
+<!--    <div class="row">-->
+<!--      <div class="col">-->
+<!--      <hr/>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--  <div class="row">-->
+<!--    <br/>-->
+<!--    <br/>-->
+<!--    <hr/>-->
+<!--  <h2 align="center">Randomized participants</h2>-->
+<!--  </div>-->
   <div class="row">
+<!--        <br/>-->
+<!--    <br/>-->
+    <div class="col">
+    <h2 align="center">Randomized participants</h2>
     <div class="col-lg-12">
       <table id="tbl_participant" class="display compact nowrap" cellspacing="0" width="100%">
         <thead>
@@ -35,6 +54,7 @@
       <tbody></tbody>
     </table>
   </div>
+    </div>
 </div>
   </div>
 {{ script_plt | safe }}
