--- a/urand_gui/templates/base.html
+++ b/urand_gui/templates/base.html
@@ -25,23 +25,38 @@
     </style>
 </head>
 <body>
+    {{ render_messages(container=False, dismissible=True) }}
     <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+        {% if current_user.is_authenticated %}
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    {{ render_nav_item('list_participants', 'Participants', use_li=True) }}
+                    {{ render_nav_item('randomize_participant', 'Randomize Participant', use_li=True) }}
+                </ul>
+                <ul class="navbar-nav ml-auto">
+                    <a class="p-2 text-dark" href="/logout">Logout</a>
+                </ul>
+
+            </div>
+        {% else %}
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                {{ render_nav_item('list_participants', 'Participants', use_li=True) }}
-                {{ render_nav_item('randomize_participant', 'Randomize Participant', use_li=True) }}
+            <a href="{{ url_for('google.login') }}">Login with Google</a>
             </ul>
         </div>
+        {% endif %}
     </nav>
-    
+
+    {% if current_user.is_authenticated %}
     <main class="container">
-        {{ render_messages(container=False, dismissible=True) }}
+
         {% block content %}{% endblock %}
     </main>
+    {% endif %}
 
     <footer class="text-center">
         {% block footer %}
